--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             <li style="height: 506.625px; display: list-item;">
                 <img src="./uploads/1382969315.jpg" alt="">
                 <a target="_blank" title="" href="" class="slink">
-                    <b>南太平洋别墅</b>
-                    <i>漂浮在袋鼠岛东南海岸蜿蜒曲折海岸线上的明珠</i>
+                    <b>常青藤名校</b>
+                    <i>带你领略世界一流大学的风采</i>
                 </a>
             </li>
             <li style="height: 506.625px; display: none;">
@@ -333,10 +333,7 @@
             </div>
             <div class="Content-right">
                 <a target="_blank" href="" class="pic3" title="">
-                    <img src="./uploads/20140505182239kWdisj.jpg" width="362" height="443" alt="">
-                </a>
-                <a target="_blank" href="" class="pic4" title="">
-                    <img src="./uploads/20140505182249sbsDgU.jpg" width="362" height="209" alt="">
+                    <img src="./uploads/20140505182239kWdisj.jpg" width="362" height="669" alt="">
                 </a>
             </div>
         </div>
